XMPP Exceptions more visible Lots of Sonar fixes, cleanups