@@ -3,8 +3,8 @@ package com.almende.eve.transport.zmq;
 
 public class ZMQ extends org.zeromq.ZMQ {
 	private static Context context =  ZMQ.context(10);
-	public final static byte[] NORMAL = new byte[]{new Integer(0).byteValue()};
-	public final static byte[] HANDSHAKE = new byte[]{new Integer(1).byteValue()};
+	public static final byte[] NORMAL = new byte[]{Integer.valueOf(0).byteValue()};
+	public static final byte[] HANDSHAKE = new byte[]{Integer.valueOf(1).byteValue()};
 	
 	public static Context getInstance(){
 		return context;
